@@ -357,6 +357,7 @@
    <li>exectest</li>
    <li>FileMap</li>
    <li>PTPEchoTest</li>
+   <li>PSecEchoTest</li>
    <li>EventView</li>
    <li>LR1Shift</li>
    <li>LR1Track</li>
